# ytrss

./: .cspell.json  .dockerignore  .gitignore  .jscpd.json  .mega-linter.yml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/scripts/: merge_check.sh
.github/workflows/: codeql-analysis.yml  megalinter.yml  python-package.yml  pythonpackage.yml  repeatedly.yml  synchronization.yml  upgrade-auto.yml  upgrade-manual.yml  upgrade.yml
.run/: website.run.xml
docs/: changelog.rst  conf.py  configuration.rst  index.rst  installation.rst  modules.rst  plugins.rst  terminal.rst
docs/_templates/: layout.html
docs/content/: configuration.rst  docker.rst  fast start.rst  terminal.rst  tests.rst  webhooks.rst
scripts/: ytrss
template_python_package/: __init__.py  version.py
tests/: __init__.py  podcast_test.py
tests/core/: movie_test.py
tests/integration/: example_test.py  finder_test.py  movie_test.py
tests/stubs/: argcomplete.pyi  locks.pyi  mutagen.pyi
tests/stubs/youtube_dl/: __init__.pyi
tests/unit/: example_test.py  podcast_test.py
tests/unit/core/: locker_test.py  movie_test.py
ytrss/: __init__.py  __main__.py  client.py  daemon.py  outdated.py  rssgenerate.py  subs.py  ytdown.py
ytrss/commands/: __init__.py  clean.py  configuration.py  daemon.py  download.py  generate.py  run.py  url.py  version.py  website.py
ytrss/configuration/: algoritms.py  configuration.py  consts.py  default_config.json  default_config.yml  exceptions.py  factory.py
ytrss/configuration/entity/: configuration_data.py  destination.py  source.py  (+2 more)
ytrss/core/: __init__.py  destination_manager.py  downloaded_movie.py  downloader.py  element.py  factory.py  files.py  locker.py  movie.py  podcast.py  settings.py  typing.py  url_finder.py  version.py  ytdown.py
ytrss/daemon/: __init__.py  __main__.py
ytrss/database/: database.py  database_get.py  database_put.py  download_queue.py  url_remember.py
ytrss/download/: __init__.py  __main__.py  algoritms.py  downloader.py  source_downloader.py
ytrss/finder/: algoritms.py  url_finder.py
ytrss/outdated/: algoritms.py
ytrss/podcast/: algoritms.py  helpers.py  podcast.py
ytrss/subs/: __init__.py  __main__.py  factory.py  url_finder.py
ytrss/templates/: podcast.xml
ytrss/tests/: __init__.py  __main__.py  element_test.py  locker_test.py  podcast_test.py
ytrss/website/: app.py
ytrss/ytdown/: __init__.py  __main__.py
(+99 files in other folders)
